# agta

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  default.yml  persona_generation.yaml
results/: simulation_output.json  simulation_output_1.json  simulation_output_2.json  simulation_output_3.json  simulation_output_4.json  simulation_output_67.json  simulation_output_68.json  simulation_output_exception_test.json
results/checkpoint_test/: llm_log.jsonl  simulation_output.json
results/demo/: llm_log.jsonl  simulation_output.json
results/run_20260629_181053/: llm_log.jsonl  simulation_output.json
results/run_20260629_184703/: llm_log.jsonl  simulation_output.json
results/run_20260701_154551/: llm_log.jsonl  simulation_output.json
results/run_20260701_155007/: llm_log.jsonl  simulation_output.json
results/run_20260701_160744/: llm_log.jsonl  simulation_output.json
results/run_20260701_193500/: llm_log.jsonl  simulation_output.json
results/run_20260706_131616/: llm_log.jsonl
results/run_20260706_132253/: llm_log.jsonl  simulation_output.json
results/weather_test/: llm_log.jsonl  simulation_output.json
routing/: Dockerfile.sumo  docker-compose.yml
src/agta/: agent.py  eval.py  loader.py  models.py  output.py  run.py  simulation.py
src/agta/environment/: weather.py
src/agta/memory/: episodic.py  memory_manager.py  procedural.py  semantic.py  working.py
src/agta/personas/: generate.py
src/agta/prompt/: mode_choice.py  reflection.py
src/agta/retrieval/: dense.py  hybrid.py  sparse.py
src/agta/viz/: dashboard.py  (+2 more)
(+7 files in other folders)
